5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1752_1521.log
== TEST (2019-05-16 17:08:03) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque > 0):
	estoque = quantidade - estoque
	quantidade = int(input("Quantidade: "))
	t = t + 1 
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quantidade = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:08:24) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque > 0):
	quntidade = quantidade - estoque
	quantidade = int(input("Quantidade: "))
	t = t + 1 
	
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    quantidade = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:08:50) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque > 0):
	estoque = quantidade - estoque
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:09:44) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque > 0):
	estoque = estoque - quantidade
	t = t + 1 
	
print(t)	
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:10:36) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque > 0):
	estoque = (estoque + quantidade) - quantidade
	t = t + 1 
	
print(t)	
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:25:48) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque > capacidade):
	estoque = (estoque + quantidade) - capacidade
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:26:03) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque > capacidade):
	estoque = (estoque + quantidade) - capacidade
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:26:42) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque > capacidade):
	estoque = capacidade - (estoque + quantidade)
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:27:05) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque > capacidade):
	estoque = (estoque + quantidade) - capacidade
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:27:47) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque != 0 and estoque > capacidade):
	estoque = (estoque + quantidade) - capacidade
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:32) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque != 0 and estoque > capacidade):
	estoque = (estoque + quantidade)
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:30:45) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque != 0):
	estoque = (estoque + capacidade) - quantidade 
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:31:07) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque != 0):
	estoque = (estoque + capacidade) / quantidade 
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:31:25) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque != 0 and estoque > capacidade):
	estoque = (estoque + quantidade) - capacidade
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:32:30) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque != 0 and estoque > capacidade):
	estoque = (estoque + quantidade)
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:33:25) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque != 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:33:39) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque != 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade * 10
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:33:57) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 7

while(estoque != 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade
	t = t + 1 
	
print(t)	
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:12) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque != 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:22) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque != 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:35:08) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque != 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade*7
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:36:12) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque != 0 and estoque > capacidade):
	estoque = (estoque + (quantidade * 7)) - capacidade
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:36:16) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))

t = 0

while(estoque != 0 and estoque > capacidade):
	estoque = (estoque + (quantidade * 7)) - capacidade
	t = t + 1 
	
print(t)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:37:51) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")

t = 0

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = t + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:38:01) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")

t = 0

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = t + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:42:08) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")

t = 

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:42:12) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")

t = 1

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:42:22) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")

t = 1

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:42:50) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
					  
t = 0

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:42:56) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
					  
t = 1

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:43:05) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
					  
t = 1

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:43:09) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
					  
t = 1

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:43:09) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
					  
t = 1

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:43:10) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
					  
t = 1

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:43:10) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
					  
t = 1

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- EXECUTION TIME:
0.137199
-- ERROR:
  File "/home/codebench/codes/1752/1521/main.py", line 5
    t = 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:43:29) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
					  
t = 1

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:43:44) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
					  
t = 1

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:44:03) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
					
t = 1

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:44:29) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
					
t = 1

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:44:37) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
					
t = 1

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:45:04) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
					
t = 0

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    t = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:45:13) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
					
dia = 0

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    dia = 0
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:45:29) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
					

					  dia = 0

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 6
    dia = 0
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:45:36) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: ")
				
dia = 0

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- ERROR:
File "XXXX", line 5
    dia = 0
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:45:41) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))
				
dia = 0

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:45:53) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))
				
dia = 1

while(estoque > 0 and estoque > capacidade):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:46:06) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))
				
dia = 1

while(estoque > 0):
	estoque = (estoque - capacidade) + quantidade 
	t = 1 + 1 
	
print(t)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:46:22) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))
				
dia = 1

while(estoque > 0):
	estoque = (estoque - capacidade) + quantidade 
	dia = 1 + 1 
	
print(dia)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:46:50) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))
				
dia = 1

while(estoque > 0):
	estoque = (estoque - capacidade) + quantidade * 7
	dia = 1 + 1 
	
print(dia)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:47:32) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))
				
dia = 1

while(estoque > 0):
	estoque = (estoque + qunatidade) - capacidade
	dia = 1 + 1 
	
print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    estoque = (estoque + qunatidade) - capacidade
NameError: name 'qunatidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:47:42) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))
				
dia = 1

while(estoque > 0):
	estoque = (estoque + quantidade) - capacidade
	dia = 1 + 1 
	
print(dia)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:47:56) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))
				
dia = 0

while(estoque > 0):
	estoque = (estoque + quantidade) - capacidade
	dia = 0 + 1 
	
print(dia)	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:49:57) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
quantidade = int(input("Quantidade: "))
				
dia = 0

while(estoque > 0):
	estoque = (estoque + q) - capacidade
	dia = 0 + 1 
	q = int(input("Quantidade: "))
	
print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    estoque = (estoque + q) - capacidade
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:50:09) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
dia = 0

while(estoque > 0):
	estoque = (estoque + q) - capacidade
	dia = 0 + 1 
	q = int(input("Quantidade: "))
	
print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    q = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:50:24) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
dia = 0

while(estoque > 0):
	estoque = (estoque + q) - capacidade
	dia = 0 + 1 
	q = int(input("Quantidade: "))
	
print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    q = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:51:41) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
dia = 0
semana = q
while(estoque > 0):
	quantidade = quantidade + semana
	dia = 0 + 1 
	
	
print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    quantidade = quantidade + semana
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:52:12) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
dia = 0
semana = q
while(estoque > 0):
	quantidade = quantidade + semana
	estoque = estoque + quantidade - capacidade
	dia = 0 + 1 
	
	
print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    quantidade = quantidade + semana
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:52:23) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
dia = 0
semana = q
while(estoque > 0):
	quantidade = quantidade + semana
	estoque = estoque + q - capacidade
	dia = 0 + 1 
	
	
print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    quantidade = quantidade + semana
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:52:36) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
dia = 0
semana = q
while(estoque > 0):
	q = q + semana
	estoque = estoque + q - capacidade
	dia = 0 + 1 
	
	
print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    quantidade = quantidade + semana
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:52:47) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
dia = 0
semana = q
while(estoque > 0):
	q = q + semana
	estoque = estoque + q - capacidade
	dia = dia + 1 
	
	
print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    quantidade = quantidade + semana
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:53:29) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
dia = 0
semana = q
while(estoque > 0):
	estoque = (estoque + (q + semana)) - capacidade
	dia = dia + 1 
	
	
print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    quantidade = quantidade + semana
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:21) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
semana = 0

while(estoque > 0):
	q = q * semana
	estoque = (estoque + q) - capacidade
	semana = semana + 1
	
	 
print(dia)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(dia)	
NameError: name 'dia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:36) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
semana = 0

while(estoque > 0):
	q = q * semana
	estoque = (estoque + q) - capacidade
	semana = semana + 1
	
	 
print(semana)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:56:43) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
semana = 0

while(estoque > 0):
	q = q * semana
	estoque = (estoque + q) - capacidade
	semana = semana + 1
	
	 
print(semana)	
-- EXECUTION TIME:
0.214899
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
2
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
50
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:57:07) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
semana = 0

while(estoque > 0):
	q = q * semana
	estoque = (estoque - capacidade) + q
	semana = semana + 1
	
	 
print(semana)	
-- EXECUTION TIME:
0.158099
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
2
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
50
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:12) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
semana = 0

while(estoque > 0):
	q = q * semana
	estoque = (estoque - capacidade) + q
	semana = semana + 1
	
	 
print(semana)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:57:20) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
semana = 0

while(estoque > 0):
	q = q * semana
	estoque = (estoque - capacidade) + q
	semana = semana + 1
	
	 
print(semana)	
-- EXECUTION TIME:
0.12159
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:
2
-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
50
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:24) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
semana = 0

while(estoque > 0):
	q = q * semana
	estoque = (estoque - capacidade) + q
	semana = semana + 1
	
	 
print(semana)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:33) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
semana = 0

while(estoque > 0):
	q = q * semana
	estoque = (estoque - capacidade) + q
	semana = semana + 1
	
	 
print(semana)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:40) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
semana = 1

while(estoque > 0):
	q = q * semana
	estoque = (estoque - capacidade) + q
	semana = semana + 1
	
	 
print(semana)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:57:56) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
semana = 1

while(estoque > 0):
	q = q * semana
	estoque = (estoque - capacidade) + q
	semana = semana + 1
	
	 
print(semana)	
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:01:29) 
-- CODE:
capacidade = int(input("Capacidade do navio: "))
estoque = int(input("Estoque inicial: "))
q = int(input("Quantidade: "))
				
semana = 1

while(estoque > 0):
	q = q * semana
	estoque = (estoque - capacidade) + q
	semana = semana + 1
	
	 
print(semana)	
-- EXECUTION TIME:
227.086
-- TEST CASE 1:
---- input:
40
60
20
---- correct output:
3
---- user output:

-- TEST CASE 2:
---- input:
2
100
1
---- correct output:
100
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
10
50
9
---- correct output:
50
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
